--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-coffeeify": "~0.1.3"
+    "grunt-coffeeify": "~0.1.3",
+    "grunt-contrib-nodeunit": "~0.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
